--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -8,7 +8,7 @@ on:
     branches: [ master ]
 
 jobs:
-  build:
+  run_test:
 
     runs-on: ubuntu-latest
 
@@ -18,11 +18,11 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Install dependencies
+    - name: Install packages
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
         if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
-    - name: Run main_vector
+    - name: Run unit_test
       run: |
-        python main_vector.py
+        pytest -v  ./useVector/tests/test_vector.py
