--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
 attrs==19.3.0
+cycler==0.10.0
+kiwisolver==1.2.0
+matplotlib==3.2.2
 more-itertools==8.4.0
 numpy==1.18.5
 packaging==20.4
@@ -6,5 +9,6 @@ pluggy==0.13.1
 py==1.8.1
 pyparsing==2.4.7
 pytest==5.4.3
+python-dateutil==2.8.1
 six==1.15.0
 wcwidth==0.2.4
